--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.4.2
 	arduino-libraries/Arduino_JSON@^0.2.0
 	electroniccats/MPU6050@^1.4.4
+	hideakitai/MPU9250@^0.4.8
