--- a/platformio.ini
+++ b/platformio.ini
@@ -22,4 +22,4 @@ lib_deps =
 	esp32async/AsyncTCP@^3.4.7
 	bblanchon/ArduinoJson@^7.4.2
 	arduino-libraries/Arduino_JSON@^0.2.0
-	hideakitai/MPU9250@^0.4.8
+	electroniccats/MPU6050@^1.4.4
